fix: Improve Contact bubble visibility over elements with same background color

--- a/src/scss/ContactBubble.scss
+++ b/src/scss/ContactBubble.scss
@@ -38,6 +38,7 @@
 		background-color: $color-suld-25;
 		color: $color-faxafloi-100;
 		border-radius: grid-units(4.5);
+		border: 1px solid $color-suld-75;
 		height: grid-units(3);
 		line-height: grid-units(3);
 		padding: grid-units(3) 0;
